[package]
name = "blockChain_mysql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1.2", features = ["full"] }
serde_json = '1.0.66'
regex = '1.2'
json = "*"
async-std = { version = "1.8.0", features = ["attributes"]}
#futures = "0.3"
sqlx = { version = "0.3.5", features = [ "mysql" ]}
anyhow = "1.0"
postgres = " 0.19.1"